Fixed image/brand anchor shifting left on active.

--- a/assets/scss/navBarCommon.scss
+++ b/assets/scss/navBarCommon.scss
@@ -13,11 +13,7 @@
     padding-bottom: .8em;
     margin-left: auto;
     margin-right: auto;
-    justify-content: center;
-    
-    &:active{
-        justify-content: center;
-    }
+    text-align: center;
 }
 
 .miniFooter{
